--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,33265],[],[[4,0,0,[],[1,321,32942],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,35706],[],[[4,0,0,[],[1,3195,8365],[]],[5,0,0,[],[1,11562,21906],[]]],[],[2,2,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Homepage","*C:\\Users\\admin\\Documents\\QA Engineer\\TugasLima\\Homepage.robot","*Homepage.robot","*User want to verify homepage"]);
+window.output["strings"] = window.output["strings"].concat(["*","*ContactUs","*C:\\Users\\admin\\Documents\\QA Engineer\\TugasLima\\Steps\\ContactUs.robot","*ContactUs.robot","*I'm verify homepage of My Store","*I'm to Contact Us"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:33","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:33","fail":0,"id":"s1","label":"Homepage","name":"Homepage","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:30","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:36","fail":0,"id":"s1","label":"ContactUs","name":"ContactUs","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1656150820959;
+window.output["baseMillis"] = 1656432561923;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 33292;
+window.output["generated"] = 35782;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
